# clblast-binding

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
src/: bindings_static.rs  clblast_ocl_wrap.rs  lib.rs
tests/: gemm.rs
