[package]
name = "clblast-binding"
version = "0.1.0-alpha.1"
edition = "2024"
description = "Safe-ish OpenCL CLBlast bindings + automatic ocl wrappers."
readme = "README.md"
repository = "https://github.com/miko-misa/clblast-binding"
keywords = ["opencl", "clblast", "blas", "ffi", "gpu"]
categories = ["api-bindings", "external-ffi-bindings"]
build = "build.rs"
license = "MIT"
license-file = "LICENSE"
authors = ["miko-misa (hacnosuke) <hacnosuke@gmail.com>"]

[features]
default = ["vendored-clblast", "vendored-opencl-headers"]

vendored-clblast = []
system-clblast = []

vendored-opencl-headers = []
system-opencl-headers = []
generate-bindings = []

[dependencies]
cl-sys = "0.4.3"
ocl = "0.19.7"
thiserror = "2.0.16"

[build-dependencies]
bindgen = "0.72"
cmake = "0.1"
pkg-config = "0.3"
vcpkg = "0.2"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
prettyplease = "0.2"
proc-macro2 = "1.0"
heck = "0.5.0"

[package.metadata.docs.rs]
features = ["vendored-clblast", "vendored-opencl-headers"]
rustdoc-args = ["--cfg", "docsrs"]
